# stm32_cubemx_segway

./: .clang-format  .gitignore  .gitmodules  .mxproject  CMakeLists.txt  Makefile  stm32-cubemx-blackpill.ioc  stm32-cubemx-segway.ioc  stm32_cubemx_segway.ioc
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Core/Src/: freertos.c  gpio.c  i2c.c  main.c  stm32f4xx_it.c  tim.c  usart.c
Drivers/CMSIS/Core/Include/: cachel1_armv7.h  cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm85.h  core_sc000.h  core_sc300.h  core_starmc1.h  mpu_armv7.h  mpu_armv8.h  pac_armv81.h  pmu_armv8.h
Drivers/CMSIS/Core_A/Include/: core_ca.h
Drivers/CMSIS/DAP/Firmware/Include/: DAP.h
Drivers/CMSIS/DAP/Firmware/Source/: SWO.c
Drivers/CMSIS/DSP/ComputeLibrary/Include/: NEMath.h
Drivers/CMSIS/DSP/Include/: arm_common_tables.h  arm_common_tables_f16.h  arm_const_structs.h  arm_const_structs_f16.h  arm_helium_utils.h  arm_math.h  arm_math_f16.h  arm_math_memory.h  arm_math_types.h  arm_math_types_f16.h  arm_mve_tables.h  arm_mve_tables_f16.h  arm_vec_math.h  arm_vec_math_f16.h
Drivers/CMSIS/DSP/Include/dsp/: basic_math_functions.h  basic_math_functions_f16.h  bayes_functions.h  bayes_functions_f16.h  complex_math_functions.h  complex_math_functions_f16.h  controller_functions.h  controller_functions_f16.h  distance_functions.h  distance_functions_f16.h  matrix_functions.h  (+19 more)
Drivers/CMSIS/DSP/PrivateInclude/: arm_sorting.h  arm_vec_fft.h  arm_vec_filtering.h
Drivers/CMSIS/Include/: cmsis_compiler.h  core_cm1.h  core_cm23.h  core_cm4.h  core_cm55.h  core_cm7.h
Drivers/CMSIS/RTOS2/Include/: cmsis_os2.h  os_tick.h
Drivers/CMSIS/RTOS2/Template/: cmsis_os.h
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32_assert_template.h  stm32f4xx_hal.h  stm32f4xx_hal_adc.h  stm32f4xx_hal_adc_ex.h  stm32f4xx_hal_can.h  stm32f4xx_hal_cec.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_conf_template.h  stm32f4xx_hal_cortex.h  stm32f4xx_hal_crc.h  stm32f4xx_hal_cryp.h  stm32f4xx_hal_cryp_ex.h  stm32f4xx_hal_dac.h  stm32f4xx_hal_dac_ex.h  stm32f4xx_hal_dcmi.h  stm32f4xx_hal_dcmi_ex.h  stm32f4xx_hal_def.h  stm32f4xx_hal_dfsdm.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_dma2d.h  stm32f4xx_hal_dma_ex.h  stm32f4xx_hal_dsi.h  stm32f4xx_hal_eth.h  stm32f4xx_hal_exti.h  stm32f4xx_hal_flash.h  stm32f4xx_hal_flash_ex.h  stm32f4xx_hal_flash_ramfunc.h  stm32f4xx_hal_fmpi2c.h  stm32f4xx_hal_fmpi2c_ex.h  stm32f4xx_hal_fmpsmbus.h  stm32f4xx_hal_fmpsmbus_ex.h  stm32f4xx_hal_gpio.h  stm32f4xx_hal_gpio_ex.h  stm32f4xx_hal_hash.h  stm32f4xx_hal_hash_ex.h  stm32f4xx_hal_hcd.h  stm32f4xx_hal_i2c.h  stm32f4xx_hal_i2c_ex.h  stm32f4xx_hal_i2s.h  stm32f4xx_hal_i2s_ex.h  (+60 more)
Drivers/STM32F4xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h  stm32f4xx_hal_can_legacy.h  stm32f4xx_hal_eth_legacy.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_gpio.c  stm32f4xx_hal_i2c.c  stm32f4xx_hal_tim.c
USB_DEVICE/App/: usb_device.h  usbd_cdc_if.c
app/: CMakeLists.txt
app/a4988/: CMakeLists.txt  a4988.cpp  a4988.hpp  a4988_config.hpp
app/hal/: CMakeLists.txt  gpio.cpp  gpio.hpp
app/hardware/: CMakeLists.txt  gpio.cpp  gpio.hpp  hardware.hpp  i2c.cpp  i2c.hpp  tim.cpp  tim.hpp  uart.cpp  uart.hpp
app/icm20948/: CMakeLists.txt  ICM_20948_C.c  ICM_20948_DMP.h  icm20948.cpp  icm20948.hpp  icm20948_dmp.cpp  icm20948_dmp.hpp  icm_sensor.c  icm_sensor.h
app/main/: CMakeLists.txt  main.cpp
app/mpu6050/: CMakeLists.txt  mpu6050.cpp  mpu6050.hpp  mpu6050_config.hpp  mpu6050_dmp.cpp  mpu6050_dmp.hpp  mpu6050_dmp_config.hpp  mpu6050_dmp_img.hpp  mpu6050_registers.hpp  mpu6050_utility.cpp  mpu6050_utility.hpp
app/segway/: CMakeLists.txt  balance_segway.cpp  balance_segway.hpp  imu.cpp  imu.hpp  log.hpp  nvic.cpp  nvic.hpp  segway.cpp  segway.hpp  segway_config.hpp  timers.cpp  timers.hpp  unit_test.cpp  unit_test.hpp  wheel.cpp  wheel.hpp  wheels.cpp  wheels.hpp
app/segway/common/: CMakeLists.txt  event_bits.hpp  events.hpp  global_config.hpp  log.hpp  segway.cpp  segway.hpp  timers.cpp  timers.hpp  unit_test.cpp
app/segway/control_manager/: CMakeLists.txt  control_manager.cpp  control_manager.hpp  control_queue.cpp  control_queue.hpp  control_task.cpp  control_task.hpp
app/segway/control_task/: CMakeLists.txt  control_task.cpp  control_task.hpp
app/segway/event_group_manager/: CMakeLists.txt  event_group_bit.hpp  event_group_manager.cpp  event_group_manager.hpp
app/segway/imu_manager/: CMakeLists.txt  imu.hpp  imu_event_group.cpp  imu_event_group.hpp  imu_manager.cpp  imu_manager.hpp  imu_task.cpp  imu_task.hpp
app/segway/imu_task/: CMakeLists.txt  imu.cpp  imu_task.cpp  imu_task.hpp
app/segway/log_manager/: CMakeLists.txt  log_manager.cpp  log_manager.hpp
app/segway/main_manager/: CMakeLists.txt  main_manager.cpp  main_manager.hpp  main_task.cpp  main_task.hpp
app/segway/main_task/: CMakeLists.txt  main_task.cpp  main_task.hpp
app/segway/message_buf_manager/: CMakeLists.txt  message_buf_manager.cpp  message_buf_manager.hpp
app/segway/message_buffer_manager/: CMakeLists.txt  message_buffer_manager.cpp  message_buffer_manager.hpp
app/segway/nvic_manager/: CMakeLists.txt  nvic_manager.cpp  nvic_manager.hpp
app/segway/queue_manager/: CMakeLists.txt  queue_event.hpp  queue_manager.cpp  queue_manager.hpp
app/segway/task_manager/: CMakeLists.txt  task_manager.cpp  task_manager.hpp
app/segway/wheel_manager/: CMakeLists.txt  wheel.cpp  wheel.hpp  wheel_event_group.cpp  wheel_event_group.hpp  wheel_manager.cpp  wheel_manager.hpp  wheel_queue.cpp  wheel_queue.hpp  wheel_task.cpp  wheel_task.hpp
app/segway/wheel_task/: CMakeLists.txt  wheel.cpp  wheel.hpp  wheel_task.cpp  wheel_task.hpp  wheels.cpp  wheels.hpp
app/step_driver/: CMakeLists.txt  step_driver.cpp  step_driver.hpp
app/utility/: CMakeLists.txt  quaternion3d.hpp
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
make/: common.mk  flash.mk
scripts/: fix_hal.sh
(+4 files in other folders)
