add_subdirectory(${SEGWAY_DIR}/imu_manager)
add_subdirectory(${SEGWAY_DIR}/main_manager)
add_subdirectory(${SEGWAY_DIR}/control_manager)
add_subdirectory(${SEGWAY_DIR}/wheel_manager)
add_subdirectory(${SEGWAY_DIR}/common)
add_subdirectory(${SEGWAY_DIR}/queue_manager)
add_subdirectory(${SEGWAY_DIR}/task_manager)
add_subdirectory(${SEGWAY_DIR}/event_group_manager)
add_subdirectory(${SEGWAY_DIR}/nvic_manager)